--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4">
-				<img class="img-thumbnail img-circle" src="image/me/me-fish.png" alt="">
+				<img class="img-thumbnail img-circle" src="image/me-fish.png" alt="">
 			</div>
 			<div class="col-sm-8">
 				<h2>I'm an entrepreneur / developer located in Atlanta, GA.</h2>
@@ -65,7 +65,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 				<blockquote>Page load speed impacts user experience and SEO ranking. Slow loading pages have a negative impact on user satisfaction, site usability and conversion rates.</blockquote>
 			</div>
 			<div class="col-sm-6 hidden-xs">
-				<img class="img-responsive pull-right" src="image/me/media-1.png" alt="">
+				<img class="img-responsive pull-right" src="image/media-1.png" alt="">
 			</div>
 		</div>
 	</div>
@@ -74,7 +74,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-5">
-				<img class="img-responsive" src="image/me/banner.png" alt="">
+				<img class="img-responsive" src="image/banner.png" alt="">
 			</div>
 			<div class="col-sm-6">
 				<h1>I know e-commerce.</h1>
@@ -90,9 +90,9 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 			<legend>some recent work</legend>
 			<div class="row">
 				<div class="col-sm-4 spacer">
-					<a data-gallery="" href="image/me/sully.png"><img class="img-responsive center-block" src="image/me/sully_t.png" alt=""></a>
+					<a data-gallery="" href="image/sully.png"><img class="img-responsive center-block" src="image/sully_t.png" alt=""></a>
 					<div class="media hidden-xs">
-						<img class="pull-right img-responsive hidden-sm" src="image/me/sully_icon.png" alt="">
+						<img class="pull-right img-responsive hidden-sm" src="image/sully_icon.png" alt="">
 						<div class="media-body">
 							<h5 class="media-heading"><b>Sully's House</b></h5>
 							<p>Irish pub and the neighborhood sports bar located in the Weed Street district in Chicago.</p>
@@ -100,9 +100,9 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 					</div>
 				</div>
 				<div class="col-sm-4 spacer">
-					<a data-gallery="" href="image/me/enm.png"><img class="img-responsive center-block" src="image/me/enm_t.png" alt=""></a>
+					<a data-gallery="" href="image/enm.png"><img class="img-responsive center-block" src="image/enm_t.png" alt=""></a>
 					<div class="media hidden-xs">
-						<img class="pull-right img-responsive hidden-sm" src="image/me/enm_icon.png" alt="">
+						<img class="pull-right img-responsive hidden-sm" src="image/enm_icon.png" alt="">
 						<div class="media-body">
 							<h5 class="media-heading"><b>Energy In Motion</b></h5>
 							<p>Health and Fitness for Life. Provides certified personal training services in Flowood, MS.</p>
@@ -110,9 +110,9 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 					</div>
 				</div>
 				<div class="col-sm-4 spacer">
-					<a data-gallery="" href="image/me/hw.png"><img class="img-responsive center-block" src="image/me/hw_t.png" alt=""></a>
+					<a data-gallery="" href="image/hw.png"><img class="img-responsive center-block" src="image/hw_t.png" alt=""></a>
 					<div class="media hidden-xs">
-						<img class="pull-right img-responsive hidden-sm" src="image/me/hw_icon.png" alt="">
+						<img class="pull-right img-responsive hidden-sm" src="image/hw_icon.png" alt="">
 						<div class="media-body">
 							<h5 class="media-heading"><b>HomeWorks</b></h5>
 							<p>Located in Jackson, MS, HomeWorks is the premium one-stop-shop for all your home needs.</p>
