--- a/index.html
+++ b/index.html
@@ -175,13 +175,11 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 	<div class="container">
 		<a class="me-link" href="https://www.facebook.com/J1400" title="Facebook"><i class="me me-facebook"></i></a>
 		<a class="me-link" href="https://github.com/eintnohick" title="GitHub"><i class="me me-github"></i></a>
-		<a class="me-link" href="http://www.linkedin.com/in/jrossg" title="LinkedIn"><i class="me me-linkedin"></i></a>
 	</div>
 	<hr>
 	<div class="container">
-		&copy; <?php echo date('Y'); ?> <a href="<?php echo $home; ?>"><?php echo $name; ?></a>
 		<span class="hidden-xs">&nbsp;|&nbsp; Made by Justin Ross</span> &nbsp;|&nbsp;
-		<a href="<?php echo $contact; ?>">Contact</a>
+		<a href="justin@merkent.com">Contact</a>
 	</div>
 </section>
 <script async src="js/jquery.js"></script>
