--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 	</div>
 	<hr>
 	<div class="container">
-		<span class="hidden-xs">&nbsp;|&nbsp; Made by Justin Ross</span> &nbsp;|&nbsp;
+		<span class="hidden-xs">Made by Justin Ross</span> &nbsp;|&nbsp;
 		<a href="justin@merkent.com">Contact</a>
 	</div>
 </section>
