--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 				<h2>I'm an entrepreneur / developer located in Atlanta, GA.</h2>
 				<p class="lead">I build light-weight, cross-platform websites that not only work great on any modern browser but also on desktops, laptops, tablets and mobile devices.</p>
 				<p class="lead">I work deliberately and efficiently and develop with a performance and SEO perspective. I have a strong sense of business acumen and am very versatile having prowess in website design, front-end development, back-end coding and SEO optimization.</p>
-				<div class="alert">Right now, I am not seeking any additional work and unfortunately am unable to take on any new projects. However, if you have a question or comment regarding Merkent, please feel free to get in touch.</div>
 			</div>
 		</div>
 	</div>
@@ -90,7 +89,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 			<legend>some recent work</legend>
 			<div class="row">
 				<div class="col-sm-4 spacer">
-					<a data-gallery="" href="img/sully.png"><img class="img-responsive center-block" src="img/sully_t.png" alt=""></a>
+					<a href="img/sully.png" target="_blank"><img class="img-responsive center-block" src="img/sully_t.png" alt=""></a>
 					<div class="media hidden-xs">
 						<img class="pull-right img-responsive hidden-sm" src="img/sully_icon.png" alt="">
 						<div class="media-body">
@@ -100,7 +99,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 					</div>
 				</div>
 				<div class="col-sm-4 spacer">
-					<a data-gallery="" href="img/enm.png"><img class="img-responsive center-block" src="img/enm_t.png" alt=""></a>
+					<a href="img/enm.png" target="_blank"><img class="img-responsive center-block" src="img/enm_t.png" alt=""></a>
 					<div class="media hidden-xs">
 						<img class="pull-right img-responsive hidden-sm" src="img/enm_icon.png" alt="">
 						<div class="media-body">
@@ -110,7 +109,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 					</div>
 				</div>
 				<div class="col-sm-4 spacer">
-					<a data-gallery="" href="img/hw.png"><img class="img-responsive center-block" src="img/hw_t.png" alt=""></a>
+					<a href="img/hw.png" target="_blank"><img class="img-responsive center-block" src="img/hw_t.png" alt=""></a>
 					<div class="media hidden-xs">
 						<img class="pull-right img-responsive hidden-sm" src="img/hw_icon.png" alt="">
 						<div class="media-body">
@@ -121,12 +120,6 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 				</div>
 			</div>
 		</fieldset>
-		<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls" data-slide-error-class="me me-error" data-close-class="blueimp-close">
-			<div class="slides"></div>
-			<span class="prev">&lsaquo;</span>
-			<span class="next">&rsaquo;</span>
-			<span class="blueimp-close">&times;</span>
-		</div>
 	</div>
 	<hr>
 	<div class="container">
@@ -182,6 +175,4 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 		<a href="justin@merkent.com">Contact</a>
 	</div>
 </section>
-<script async src="js/jquery.js"></script>
-<script async src="js/blueimp-gallery.js"></script>
 </body></html>
