--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-46001936-1"]);_gaq.push(["_trackP
 		<div class="row">
 			<div class="col-sm-6">
 				<h2>I build incredibly optimized websites.</h2>
-				<p>See for yourself... <a class="btn btn-default" href="http://developers.google.com/speed/pagespeed/insights/?url=merkent.com/me" target="blank">Get site PageSpeed</a></p>
+				<p>See for yourself... <a class="btn btn-default" href="http://developers.google.com/speed/pagespeed/insights/?url=merkent.com" target="blank">Get site PageSpeed</a></p>
 				<blockquote>Page load speed impacts user experience and SEO ranking. Slow loading pages have a negative impact on user satisfaction, site usability and conversion rates.</blockquote>
 			</div>
 			<div class="col-sm-6 hidden-xs">
